# chainlit-react-agent-crewai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/chainlit_react_agent_crewai/: main.py
src/crews/brand_research_crew/: crew.py
src/crews/brand_research_crew/config/: agents.yaml  tasks.yaml
src/crews/branding_research_crew/: crew.py
